--- a/public/home.html
+++ b/public/home.html
@@ -42,7 +42,7 @@
                             <h1 class="md-display-2">About Us</h1>
                             <h4>James Percivel</h4>
                             <p> <!-- Info --></p>
-                            <h4>Joesph Ehley</h4>
+                            <h4>Joesph Eley</h4>
                             <p> <!-- Info --></p>
                             <h4>Casey Largent</h4>
                             <p>Casey is a freshman at UNO studying Information Assurance.<br>He is involved in many organizations on campus, including Nullify and ACM.<br>This is his first hackathon.</p>
