--- a/public/login.html
+++ b/public/login.html
@@ -32,7 +32,7 @@
             <input type="password" name="password" placeholder="Password" required="required" class="form-control"/>
             <button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button><span class="clearfix"></span>
           </form>
-        </div><a href="/signup" class="text-center new-account">Create an account</a>
+        </div><a href="register.html" class="text-center new-account">Create an account</a>
         <div id="message"></div>
       </h1>
     </div>
