--- a/public/register.html
+++ b/public/register.html
@@ -14,7 +14,9 @@
             <input type="password" name="password" placeholder="Password" required="required" class="form-control"/>
             <button type="submit" class="btn btn-lg btn-primary btn-block">Sign up</button><span class="clearfix"></span>
           </form>
-        <div id="message"></div>
+        <div id="message">
+          <a href="login.html" class="text-center new-account">Back to Login</a>
+        </div>
       </h1>
     </div>
   </div>
